[gd_scene load_steps=6 format=3 uid="uid://ctrsqqru8smby"]

[ext_resource type="Script" uid="uid://dhao2f7dv4242" path="res://MapModComponents/SlimeTrail/slime_trail.gd" id="1_j7kc0"]
[ext_resource type="Texture2D" uid="uid://dnbllgiivo7ym" path="res://VisualEffects/ParticleSprite.svg" id="2_d4ssp"]

[sub_resource type="Curve" id="Curve_lg0y0"]
_data = [Vector2(0, 0.729167), 0.0, 0.0, 0, 0, Vector2(0.036193, 1), 0.0, 0.0, 0, 0, Vector2(0.950402, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_3kuq5"]
offsets = PackedFloat32Array(0, 0.0604396, 0.197802, 0.851648, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0.90052, 0.94, 0.8084, 1, 0.8556, 0.93, 0.9114, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4ssp"]
size = Vector2(40, 40)

[node name="SlimeTrail" type="Node2D" groups=["Slime Trail"]]
script = ExtResource("1_j7kc0")

[node name="SlimeParticles" type="CPUParticles2D" parent="."]
amount = 26
texture = ExtResource("2_d4ssp")
lifetime = 10.0
speed_scale = 2.0
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(10, 40)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 9.71
initial_velocity_max = 47.45
damping_min = 56.604
damping_max = 56.604
scale_amount_min = 0.4
scale_amount_max = 1.3
scale_amount_curve = SubResource("Curve_lg0y0")
color_ramp = SubResource("Gradient_3kuq5")

[node name="SlimeTrailArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeTrailArea"]
shape = SubResource("RectangleShape2D_d4ssp")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 4.7
one_shot = true
autostart = true

[connection signal="area_entered" from="SlimeTrailArea" to="." method="_on_slime_trail_area_area_entered"]
